--- a/digifood-app/package.json
+++ b/digifood-app/package.json
@@ -23,6 +23,7 @@
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26",
+    "font-awesome": "4.7.0",
     "bootstrap": "4.1.1"
   },
   "devDependencies": {
