--- a/digifood-app/package.json
+++ b/digifood-app/package.json
@@ -21,9 +21,11 @@
     "@angular/platform-browser-dynamic": "^6.0.0",
     "@angular/router": "^6.0.0",
     "@ng-bootstrap/ng-bootstrap": "2.0.0",
+    "@swimlane/ngx-datatable": "13.0.0",
     "core-js": "^2.5.4",
     "rxjs": "^6.0.0",
     "zone.js": "^0.8.26",
+    "ngx-toastr": "8.7.3",
     "font-awesome": "4.7.0",
     "bootstrap": "4.1.1"
   },
